--- a/anaconda-ks.cfg
+++ b/anaconda-ks.cfg
@@ -78,6 +78,11 @@ aide 												# CIS 1.3.1
 -cups												# CIS 3.4
 -dhcp												# CIS 3.5
 -openldap 									# CIS 3.7
+-iwl*-firmware							# No Wireless
+-ModemManager-glib
+-NetworkManager-*
+-alsa-*
+-wpa_supplicant
 %end
 
 %addon com_redhat_kdump --disable --reserve-mb='auto'
@@ -196,6 +201,10 @@ sed -i s/'^OPTIONS="-g"'/'OPTIONS="-g -u ntp:ntp -p \/var\/run\/ntpd.pid"'/ /etc
 echo "ALL: ALL" >> /etc/hosts.deny						# CIS 4.5.4
 chown root:root /etc/hosts.deny								# CIS 4.5.5
 chmod 644 /etc/hosts.deny											# CIS 4.5.5
+
+echo "sshd: ALL" >> /etc/hosts.allow						# CIS 4.5.4
+chown root:root /etc/hosts.allow								# CIS 4.5.5
+chmod 644 /etc/hosts.allow											# CIS 4.5.5
 
 chown root:root /etc/rsyslog.conf							# CIS 5.1.4
 chmod 600 /etc/rsyslog.conf # CIS 5.1.4
@@ -361,14 +370,14 @@ chown root:root /etc/issue /etc/issue.net
 chmod 644 /etc/issue /etc/issue.net
 
 chown root:root ${grub_cfg}					# CIS 1.5.1
-chmod 600 ${grub_cfg}						# CIS 1.5.2
-chmod 644 /etc/passwd						# CIS 9.1.2
-chmod 000 /etc/shadow						# CIS 9.1.3
-chmod 000 /etc/gshadow						# CIS 9.1.4
-chmod 644 /etc/group						# CIS 9.1.5
+chmod 600 ${grub_cfg}								# CIS 1.5.2
+chmod 644 /etc/passwd								# CIS 9.1.2
+chmod 000 /etc/shadow								# CIS 9.1.3
+chmod 000 /etc/gshadow							# CIS 9.1.4
+chmod 644 /etc/group								# CIS 9.1.5
 chown root:root /etc/passwd					# CIS 9.1.6
 chown root:root /etc/shadow					# CIS 9.1.7
-chown root:root /etc/gshadow					# CIS 9.1.8
+chown root:root /etc/gshadow				# CIS 9.1.8
 chown root:root /etc/group					# CIS 9.1.9
 
 # CIS 6.3.2
