Added SSH key templates

--- a/anaconda-ks.cfg
+++ b/anaconda-ks.cfg
@@ -521,5 +521,18 @@ echo "0 5 * * * /usr/sbin/aide --check" >> /var/spool/cron/root
 #Initialise last so it doesn't pick up changes made by the post-install of the KS
 /usr/sbin/aide --init -B 'database_out=file:/var/lib/aide/aide.db.gz'
 
+##########################################
+## Installing SSH key
+# mkdir -m0700 /root/.ssh/
+
+# cat <<EOF >/root/.ssh/authorized_keys
+# Add
+# EOF
+
+### Set permissions to 600
+# chmod 0600 /root/.ssh/authorized_keys
+
+### Restore SELinux context
+# restorecon -R /root/.ssh/
 
 %end
