--- a/anaconda-kvm.cfg
+++ b/anaconda-kvm.cfg
@@ -280,13 +280,13 @@ chmod 600 /etc/rsyslog.conf # CIS 5.1.4
 # CIS 5.1.5  Configure rsyslog to Send Log to a Remote Log Host - This is environment specific
 auditd_conf='/etc/audit/auditd.conf'
 # CIS 5.2.1.1 Configure Audit Log Storage Size
-sed -i 's/^max_log_file .*$/max_log_file 1024/' ${auditd_conf}
+sed -i 's|^max_log_file .*$|max_log_file = 1024|' ${auditd_conf}
 # CIS 5.2.1.2 Disable system on Audit Log Full - This is VERY environment specific (and likely controversial)
-sed -i 's/^space_left_action.*$/space_left_action email/' ${auditd_conf}
-sed -i 's/^action_mail_acct.*$/action_mail_acct root/' ${auditd_conf}
-sed -i 's/^admin_space_left_action.*$/admin_space_left_action halt/' ${auditd_conf}
+sed -i 's|^space_left_action.*$|space_left_action = email|' ${auditd_conf}
+sed -i 's|^action_mail_acct.*$|action_mail_acct = root|' ${auditd_conf}
+sed -i 's|^admin_space_left_action.*$|admin_space_left_action = halt|' ${auditd_conf}
 # CIS 5.2.1.3 Keep All Auditing Information
-sed -i 's/^max_log_file_action.*$/max_log_file_action keep_logs/' ${auditd_conf}
+sed -i 's|^max_log_file_action.*$|max_log_file_action = keep_logs|' ${auditd_conf}
 
 # CIS 6.1.2-6.1.9
 chown root:root /etc/anacrontab /etc/crontab /etc/cron.hourly /etc/cron.daily /etc/cron.weekly /etc/cron.monthly /etc/cron.d
